--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@types/react-dom": "18.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "json-server": "^0.17.3",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "json-server": "^0.17.3"
+    "swr": "^2.1.5",
+    "typescript": "5.0.4"
   }
 }
